@@ -1,3 +1,7 @@
+2011-11-14  Christopher Faylor  <me.cygwin2011@cgf.cx>
+
+	* pinfo.cc (_pinfo::dup_proc_pipe): Fatalize a warning when debugging.
+
 2011-11-13  Christopher Faylor  <me.cygwin2011@cgf.cx>
 
 	Remove erroneously checked-in debugging statements.
